--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 <html>
   <head>
     <title>Ben Fang Liu</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" async>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113187463-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-113187463-1');
+</script>
+
   </head>
   <body>
   
