--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="#projects">Projects</a>
               </td>
               <td>
-                <a href="resume2018.pdf">CV</a>
+                <a href="benjaminfliu.pdf">CV</a>
               </td>
               <td>
                 <a href="#contact">Contact</a>
@@ -228,7 +228,7 @@
             </td>
             <td>|</td>
             <td>
-              <a href="resume2018.pdf">CV</a>
+              <a href="benjaminfliu.pdf">CV</a>
             </td>
             <td>|</td>
             <td>
