--- a/index.html
+++ b/index.html
@@ -1,246 +1,127 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <title>Ben Fang Liu</title>
-  <link rel="stylesheet" href="style.css" async>
+   <head>
+      <link rel="stylesheet" href="style.css"/>
+      <title>Ben Fang Liu</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113187463-1"></script>
-  <script>
+   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-
     gtag('config', 'UA-113187463-1');
-  </script>
-
-</head>
-
-<body>
-
-  <div class="main">
-    <div class="box" id="top">
-      <div class="portrait-container">
-        <h1>Ben Fang Liu</h1>
-        <div class="portrait">
-          <img src="https://i.imgur.com/l6vaGCeb.jpg" />
-        </div>
-        <blockquote class="summary">
-          I am a recent computer science graduate who is passionate about web development. My goal is to work closely with designers,
-          translate their designs into functioning applications, and create programs that give users a great experience.
-        </blockquote>
-        <nav>
-          <table class="nav-links">
-            <tr>
-              <td>
-                <a href="#projects">Projects</a>
-              </td>
-              <td>
-                <a href="benjaminfliu.pdf">CV</a>
-              </td>
-              <td>
-                <a href="#contact">Contact</a>
-              </td>
-            </tr>
-          </table>
-        </nav>
+   </script>
+   </head>
+   <body>
+      <header>
+         <div class="logo">benfangliu</div>
+         <div class="cv"><a href="benjaminfliu.pdf">CV</a></div>
+         <div class="contact"><a href="mailto:contact@benfangliu.com">Contact</a></div>
+      </header>
+      <div class="profile-name">
+         <h1>Ben</h1>
+         <div class="diamond-container">
+            <div class="diamond">Fang</div>
+         </div>
+         <h1>Liu</h1>
+         <p></p>
       </div>
-    </div>
-
-    <div class="box" id="projects">
-
-      <div class="portfolio-grid">
-        <h2>PROJECTS</h2>
-        <div class="pbox">
-          <figure>
-            <img src="https://i.imgur.com/NOWlY4J.png" />
-            <figcaption>
-              <b>Colors</b>
-            </figcaption>
-          </figure>
-          <blockquote> Website made for designers to discover new color palettes. </blockquote>
-          <p> Technologies used: ReactJS, JSX, Sass </p>
-          <table class="buttons">
-            <tr>
-              <td>
-                <a href="https://github.com/benfangliu/colors-website">
+      <div class="portfolio">
+         <div class="item">
+            <div class="overlay"></div>
+            <div class="overlay-details">
+               <h3>Colors Website</h3>
+               <p>Website for designers to discover new color palettes.</p>
+               <div class="buttons">
+                  <a href="https://github.com/benfangliu/colors-website">
                   <img src="https://i.imgur.com/5HFpmk4.png" title="" />
-                </a>
-              </td>
-              <td>
-                <a href="http://benfangliu.com/colors-website/">
+                  </a>
+                  <a href="http://benfangliu.com/colors-website/">
                   <img src="https://i.imgur.com/fWmb7dc.png" title="Icon made by Yannick from www.flaticon.com " />
-                </a>
-              </td>
-            </tr>
-          </table>
-        </div>
-        
-        <div class="pbox">
-          <figure>
-            <img src="https://i.imgur.com/LLCZZES.png" />
-            <figcaption>
-              <b>Stacky Block</b>
-            </figcaption>
-          </figure>
-          <blockquote> A block stacking arcade game developed for Android and Desktop.</blockquote>
-          <p> Technologies used: Java, LibGDX </p>
-          <table class="buttons">
-            <tr>
-              <td>
-                <a href="https://github.com/benfangliu/stackyblock">
+                  </a>
+               </div>
+            </div>
+            <img src="./images/colors.png" title="" alt=""/>
+         </div>
+         <div class="item">
+            <div class="overlay"></div>
+            <div class="overlay-details">
+               <h3>Stacky Block</h3>
+               <p>A block stacking arcade game.</p>
+               <div class="buttons">
+                  <a href="https://github.com/benfangliu/stackyblock">
                   <img src="https://i.imgur.com/5HFpmk4.png" title="" />
-                </a>
-              </td>
-              <td>
-                <a href="https://play.google.com/store/apps/details?id=com.potat0.stackyblock">
+                  </a>
+                  <a href="https://play.google.com/store/apps/details?id=com.potat0.stackyblock">
                   <img src="https://i.imgur.com/fWmb7dc.png" title="Icon made by Yannick from www.flaticon.com " />
-                </a>
-              </td>
-            </tr>
-          </table>
-        </div>
-        
-        <div class="pbox">
-          <figure>
-            <img src="https://i.imgur.com/YKGEcWC.png" />
-            <figcaption>
-              <b>Battery Life</b>
-            </figcaption>
-          </figure>
-
-          <blockquote>
-            Web application that provides a visualization of the user's lifespan through an interactive battery UI.
-          </blockquote>
-          <p>Technologies used: CSS, HTML, JavaScript</p>
-
-          <table class="buttons">
-            <tr>
-              <td>
-                <a href="https://github.com/benfangliu/battery-life">
+                  </a>
+               </div>
+            </div>
+            <img src="./images/stacky-block.png" title="" alt=""/>
+         </div>
+         <div class="item">
+            <div class="overlay"></div>
+            <div class="overlay-details">
+               <h3>Battery Life</h3>
+               <p>Web application that provides a visualization of the user's lifespan.</p>
+               <div class="buttons">
+                  <a href="https://github.com/benfangliu/battery-life">
                   <img src="https://i.imgur.com/5HFpmk4.png" title="" />
-                </a>
-              </td>
-              <td>
-                <a href="https://benfangliu.github.io/battery-life">
+                  </a>
+                  <a href="https://benfangliu.github.io/battery-life">
                   <img src="https://i.imgur.com/fWmb7dc.png" title="Icon made by Yannick from www.flaticon.com " />
-                </a>
-              </td>
-            </tr>
-          </table>
-
-        </div>
-
-        <div class="pbox">
-
-          <figure>
-            <img src="https://i.imgur.com/oZSTr9h.png" />
-            <figcaption>
-              <b>CV Website</b>
-            </figcaption>
-          </figure>
-
-          <blockquote>
-            Website that detects faces from an uploaded video and overlays a facial mesh onto the videos.
-          </blockquote>
-          <p>Technologies used: CSS, HTML, JavaScript, PHP, C++, Postgres, OpenFace, eyeLike, OpenCV</p>
-          <table class="buttons">
-            <tr>
-              <td>
-                <a href="https://github.com/benfangliu/computer-vision-pipeline">
+                  </a>
+               </div>
+            </div>
+            <img src="./images/battery-life.png" title="" alt=""/>
+         </div>
+         <div class="item">
+            <div class="overlay"></div>
+            <div class="overlay-details">
+               <h3>Computer Vision Website</h3>
+               <p>A website that overlays a face mesh on detected faces from an uploaded video.</p>
+               <div class="buttons">
+                  <a href="https://github.com/benfangliu/computer-vision-pipeline">
                   <img src="https://i.imgur.com/5HFpmk4.png" title="" />
-                </a>
-              </td>
-            </tr>
-          </table>
-        </div>
-
-        <div class="pbox">
-
-          <figure>
-            <img src="https://i.imgur.com/j4Jeu9F.png" />
-            <figcaption>
-              <b>Mancala</b>
-            </figcaption>
-          </figure>
-
-          <blockquote>
-            The board game Mancala implemented in Java.
-          </blockquote>
-          <p>Technology used: Java</p>
-          <table class="buttons">
-            <tr>
-              <td>
-                <a href="https://github.com/Pforpeetar/Mancala">
+                  </a>
+               </div>
+            </div>
+            <img src="./images/computer-vision.png" title="" alt=""/>
+         </div>
+         <div class="item">
+            <div class="overlay"></div>
+            <img src="./images/temple.png" title="" alt=""/>
+            <div class="overlay-details">
+               <h3>Virtual Tour</h3>
+               <p>A virtual web tour of the San Jose Buddhist Church.</p>
+               <div class="buttons">
+                  <a href="https://sjbetsuinfall2016.bitbucket.io/">
+                  <img src="https://i.imgur.com/fWmb7dc.png" title="Icon made by Yannick from www.flaticon.com " />
+                  </a>
+               </div>
+            </div>
+         </div>
+         <div class="item">
+            <div class="overlay"></div>
+            <div class="overlay-details">
+               <div class="buttons">
+                  <a href="https://github.com/benfangliu/benfangliu.github.io">
                   <img src="https://i.imgur.com/5HFpmk4.png" title="" />
-                </a>
-              </td>
-
-            </tr>
-          </table>
-        </div>
-        <div class="pbox">
-
-          <figure>
-            <img src="https://i.imgur.com/KG9yItX.png" />
-            <figcaption>
-              <b>This Website</b>
-            </figcaption>
-          </figure>
-
-          <blockquote>
-            Everything you see here.
-          </blockquote>
-          <p>Technologies used: HTML, CSS</p>
-        </div>
-
+                  </a>
+               </div>
+            </div>
+            <img src="./images/portfolio.PNG"/>
+         </div>
       </div>
-    </div>
-
-    <div class="box" id="contact">
-      <h2>CONTACT</h2>
-      <div class="contact-flexbox">
-        <div class="business-card">
-          <div class="card-left">
-            <div>Benjamin</div>
-            <b>Liu</b>
-          </div>
-          <div class="card-middle">|</div>
-          <div class="card-right">
-            <address>
-              <a href="mailto:contact@benfangliu.com">contact@benfangliu.com</a>
-            </address>
-            <address>(510)-545-9499</address>
-            <address>
-              <b>www.benfangliu.com</b>
-            </address>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="box">
       <footer>
-
-        <table>
-          <tr>
-            <td>
-              <a href="#top">Home</a>
-            </td>
-            <td>|</td>
-            <td>
-              <a href="benjaminfliu.pdf">CV</a>
-            </td>
-            <td>|</td>
-            <td>
-              <a href="#projects">Projects</a>
-            </td>
-          </tr>
-        </table>
-
+      <div class="foot">
+      <a href="mailto:contact@benfangliu.com">Email</a>
+      </div>
+      <div class="foot"><a href="tel:510-545-9499">Phone</a>
+      </div>
+      <div class="foot">
+      <a href="https://github.com/benfangliu/">Github</a>
+      </div>
       </footer>
-    </div>
-
-  </div>
-</body>
-
+   </body>
 </html>
