changed img src

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   </a>
                </div>
             </div>
-            <img src="./images/colors.png" title="" alt=""/>
+            <img src="https://i.imgur.com/MfyX2h2.png" title="" alt=""/>
          </div>
          <div class="item">
             <div class="overlay"></div>
@@ -57,7 +57,7 @@
                   </a>
                </div>
             </div>
-            <img src="./images/stacky-block.png" title="" alt=""/>
+            <img src="https://i.imgur.com/HV9dF4D.png" title="" alt=""/>
          </div>
          <div class="item">
             <div class="overlay"></div>
@@ -73,7 +73,7 @@
                   </a>
                </div>
             </div>
-            <img src="./images/battery-life.png" title="" alt=""/>
+            <img src="https://i.imgur.com/rfS6dW9.png" title="" alt=""/>
          </div>
          <div class="item">
             <div class="overlay"></div>
@@ -86,11 +86,11 @@
                   </a>
                </div>
             </div>
-            <img src="./images/computer-vision.png" title="" alt=""/>
+            <img src="https://i.imgur.com/ZkpfSSq.png" title="" alt=""/>
          </div>
+         
          <div class="item">
             <div class="overlay"></div>
-            <img src="./images/temple.png" title="" alt=""/>
             <div class="overlay-details">
                <h3>Virtual Tour</h3>
                <p>A virtual web tour of the San Jose Buddhist Church.</p>
@@ -99,8 +99,10 @@
                   <img src="https://i.imgur.com/fWmb7dc.png" title="Icon made by Yannick from www.flaticon.com " />
                   </a>
                </div>
-            </div>
          </div>
+        <img src="https://i.imgur.com/ZnR75P0.png" title="" alt=""/>               
+         </div>
+         
          <div class="item">
             <div class="overlay"></div>
             <div class="overlay-details">
@@ -110,7 +112,7 @@
                   </a>
                </div>
             </div>
-            <img src="./images/portfolio.PNG"/>
+            <img src="https://i.imgur.com/rWsHfp9.png" title="" />
          </div>
       </div>
       <footer>
