--- a/index.html
+++ b/index.html
@@ -3,62 +3,6 @@
 
    <head>
       <title>Ben Fang Liu</title>
-      <style>
-
-         * {
-         box-sizing: border-box; }
-
-         .profile-name {
-         font-family: "Times";
-         height: 550px;
-         width: 100%;
-         min-width: 700px;
-         padding: 6em;
-         display: flex;
-         justify-content: center;
-         align-content: center;
-         align-items: center; }
-         .profile-name h1 {
-         text-align: center;
-         margin: 0px;
-         padding: 20px;
-         color: black;
-         font-size: 100px; }
-
-         .diamond {
-         position: relative;
-         height: 300px;
-         width: 300px;
-         text-align: center;
-         line-height: 300px;
-         font-size: 100px;
-         color: white;
-         animation: float 5s ease-in-out infinite; }
-
-         .diamond:before {
-         position: absolute;
-         z-index: -1;
-         content: '';
-         top: 50%;
-         left: 50%;
-         height: 100%;
-         width: 100%;
-         transform: translate(-50%, -50%) rotateY(45deg) rotateZ(45deg);
-         background: linear-gradient(45deg, #b30000, #b30000, #FF0000, #ff4d4d, #FF0000, #b30000, #b30000);
-         background-size: 400% 400%;
-         animation: gradient 5s linear infinite; }
-
-         @keyframes gradient {
-         from {
-         background-position: 100% 0%; }
-         to {
-         background-position: 0% 100%; } }
-         @keyframes float {
-         50% {
-         transform: translate(0, 20px); } }
-
-      </style>
-
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113187463-1"></script>
       <script>
@@ -70,12 +14,8 @@
    </head>
 
    <body> 
-      <div class="profile-name">
-         <h1>Ben</h1>
-         <div class="diamond-container">
-            <div class="diamond">Fang</div>
-         </div>
-         <h1>Liu</h1>
+      <div>
+         Hi
       </div>
    </body>
 </html>
